<resources>
    <!-- Main Activity -->
    <string name="app_name">Spotter</string>
    <string name="action_settings">Settings</string>
    <string name="welcomeMsg">Welcome to Spotter, the best gym partner you\'ve ever had.</string>
    <string name="welcomeMsg2">Spotter allows you to track you diet, workouts and progress. While also allowing you to search for nearby gyms.</string>
    <string name="welcomeMsg3">If you have an account please login below. If not, hit register and sign-up.</string>
    <string name="login">Login:</string>
    <string name="unameHint">Please Enter Your Username</string>
    <string name="passHint">Please Enter Your Password</string>
    <string name="log">Login</string>
    <string name="regMsg">Not Registered? Click Below To Register.</string>
    <string name="reg">Register</string>

    <!-- Register -->
    <string name="title_activity_register">Register</string>
    <string name="regIntro">Please fill in your details below and hit register to avail of this service.</string>
    <string name="fnameHint">Please Enter Your First Name</string>
    <string name="lnameHint">Please Enter Your Last Name</string>
    <string name="passConfHint">Please Re-enter Your Password</string>
    <string name="eHint">Please Enter Your E-mail Address</string>
    <string name="sex_prompt">Sex:</string>
    <string name="radioMale">Male</string>
    <string name="radioFemale">Female</string>
    <string name="Dob">Date of Birth</string>
    <string name="dayHint">DD</string>
    <string name="monthHint">MM</string>
    <string name="yearHint">YYYY</string>

    <!-- Home -->
    <string name="title_activity_home">Home</string>
    <string name="homeWelcome">Welcome, </string>
    <string name="meal">Meal Planner</string>
    <string name="workout">Workout Planner</string>
    <string name="progress">Progress Tracker</string>
    <string name="title_activity_meal_plan">MealPlan</string>
    <string name="map">Find A Gym</string>

    <!-- Meal Plan -->
    <string name="mealWel">Welcome To Meal Planner.</string>
    <string name="date">Date:</string>
    <string name="title">Title:</string>
    <string name="food">Food:</string>
    <string name="amount">Amount:</string>
    <string name="time">Time:</string>
    <string name="noEntry">You Have No Entries. You May Add an Entry by Clicking Below.</string>
    <string name="button">+</string>
    <string name="title_activity_add_meal">AddMeal</string>

    <!-- Add Meal -->
    <string name="mealWelc">Add a Meal To Planner.</string>
    <string name="titleHint">Enter Title Here..</string>
    <string name="foodHint">Enter Food Here..</string>
    <string name="amountHint">#</string>
    <array name="metric">
        <item></item>
        <item>Kg</item>
        <item>g</item>
    </array>
    <string name="hrs">hh</string>
    <string name="seperator">:</string>
    <string name="min">mm</string>
    <array name="amPM">
        <item>am</item>
        <item>pm</item>
    </array>
    <string name="title_activity_edit_meal">EditMeal</string>

    <!-- Edit Meal -->
    <string name="editEntry">Edit Entry:</string>
    <string name="update">Update</string>
    <string name="title_activity_progress">Progress</string>

    <!-- Progress -->
    <string name="progressWel">Welcome To Your Progress Gallery</string>
    <string name="view">View Pictures</string>
    <string name="take">Take A Picture</string>

    <!-- Gallery -->
    <string name="title_activity_gallery">Gallery</string>
    <string name="noPics">You Have Taken No Pictures Yet. Click Below And Then Select The Camera Icon.</string>

    <!-- ImageFull Screen -->
    <string name="title_activity_image_fullscreen">ImageFullscreen</string>

    <!-- Workout Plan -->
    <string name="title_activity_workout_plan">WorkoutPlan</string>
    <string name="workoutWelc">Welcome To Workout Planner.</string>
    <string name="workoutTitle">Title:</string>
    <string name="exercise">Exercise</string>
    <string name="sets">Sets</string>
    <string name="reps">Reps</string>
    <string name="weight">Weight</string>

    <!-- Add Workout -->
    <string name="addWorkoutWelc">Add a Workout To Planner.</string>
    <string name="exerciseHint">Exercise</string>
    <string name="setsHint">#</string>
    <string name="repsHint">#</string>
    <string name="weightHint">#</string>

    <!-- Edit Workout -->
    <string name="title_activity_edit_workout">EditWorkout</string>
    <string name="title_activity_add_workout">AddWorkout</string>

    <!-- Developer Tag -->
    <string name="developedBy">Developed By: Stefan Burke D.I.T DT228</string>

</resources>
