<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="stefan.burke.mydit.ie.spotter.Activities.AddMeal"
    android:background="@drawable/home_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mealHead"
        android:text="@string/mealWelc"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"
        android:gravity="center"
        android:textIsSelectable="true"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"/>

    <!-- Date text view and Edit text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dateTitle"
        android:text="@string/date"
        android:layout_below="@+id/mealHead"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"
        android:gravity="center"
        android:textIsSelectable="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateTitle"
        android:orientation="horizontal"
        android:id="@+id/dobGroup"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" >

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/day"
            android:hint="@string/dayHint"
            android:gravity="center"
            android:textColor="@color/white"
            android:inputType="number"
            android:singleLine="true"
            android:maxLength="2"
            android:nextFocusRight="@+id/month"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/month"
            android:hint="@string/monthHint"
            android:gravity="center"
            android:textColor="@color/white"
            android:inputType="number"
            android:singleLine="true"
            android:maxLength="2"
            android:nextFocusRight="@+id/year"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/year"
            android:hint="@string/yearHint"
            android:gravity="center"
            android:textColor="@color/white"
            android:inputType="number"
            android:singleLine="true"
            android:maxLength="4"
            android:nextFocusDown="@+id/titleEnt"/>

    </LinearLayout>

    <!-- Title text view and edit Text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titleTitle"
        android:text="@string/title"
        android:layout_below="@+id/dobGroup"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"
        android:gravity="center"
        android:textIsSelectable="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titleEnt"
        android:layout_below="@+id/titleTitle"
        android:hint="@string/titleHint"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:nextFocusDown="@+id/foodEnt"/>

    <!-- Food text view and edit text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/foodTitle"
        android:text="@string/food"
        android:layout_below="@+id/titleEnt"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"
        android:gravity="center"
        android:textIsSelectable="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/foodEnt"
        android:layout_below="@+id/foodTitle"
        android:hint="@string/foodHint"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:nextFocusDown="@+id/amountEnt"/>

    <!-- Amount text view and edit text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/amountTitle"
        android:text="@string/amount"
        android:layout_below="@+id/foodEnt"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"
        android:gravity="center"
        android:textIsSelectable="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/amountGroup"
        android:layout_below="@+id/amountTitle"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/amountEnt"
            android:hint="@string/amountHint"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:inputType="number"
            android:nextFocusDown="@+id/minEnt"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/metricSel"
            android:entries="@array/metric"
            android:layout_marginTop="5dp"/>

    </LinearLayout>

    <!-- Time text view and edit text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeTitle"
        android:text="@string/time"
        android:layout_below="@+id/amountGroup"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"
        android:gravity="center"
        android:textIsSelectable="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeGroup"
        android:layout_below="@+id/timeTitle"
        android:orientation="horizontal" >

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hrsEnt"
            android:textColor="@color/white"
            android:hint="@string/hrs"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:inputType="number"
            android:singleLine="true"
            android:maxLength="2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sep"
            android:textSize="20dp"
            android:text="@string/seperator"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"
            android:gravity="center"
            android:textIsSelectable="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/minEnt"
            android:hint="@string/min"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:inputType="number"
            android:singleLine="true"
            android:maxLength="2"
            android:nextFocusRight="@+id/hrsEnt"/>


        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/amPmSel"
            android:entries="@array/amPM"
            android:layout_marginTop="5dp" />

    </LinearLayout>

    <ImageButton
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/addEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timeGroup"
        android:layout_centerHorizontal="true"
        android:src="@drawable/add"
        android:background="@android:color/transparent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developedBy"
        android:textSize="10dp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-light"
        android:textStyle="italic"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
